# eidolon

./: .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  POST-FIX-AUDIT.md  README.md  REVIEW-PROMPT.md  SECURITY.md  VISION-GAP-ANALYSIS.md
.githooks/: pre-commit
config/: config.example.toml  eidolon.toml
cpp/: CMakeLists.txt
cpp/include/brain/: absorb.hpp  decay.hpp  dreaming.hpp  evolution.hpp  graph.hpp  instincts.hpp  interference.hpp  pca.hpp  persistence.hpp  substrate.hpp  types.hpp
cpp/src/: .cpp  absorb.cpp  decay.cpp  dreaming.cpp  evolution.cpp  graph.cpp  instincts.cpp  interference.cpp  main.cpp  pca.cpp  persistence.cpp  substrate.cpp
cpp/tests/: test_decay.cpp  test_dreaming.cpp  test_e2e.cpp  test_graph.cpp  test_instincts.cpp  test_substrate.cpp
docs/: design.md  phase3-guardian-design.md  plan.md
docs/superpowers/plans/: 2026-03-29-eidolon-v2.md
docs/superpowers/specs/: 2026-03-29-eidolon-v2-design.md
eidolon/: Cargo.toml
eidolon-cli/: Cargo.toml
eidolon-cli/src/: main.rs
eidolon-daemon/: Cargo.toml
eidolon-daemon/src/: absorber.rs  audit.rs  config.rs  lib.rs  main.rs  rate_limit.rs  scrubbing.rs  secrets.rs  server.rs  session.rs
eidolon-daemon/src/agents/: claude_code.rs  mod.rs  registry.rs
eidolon-daemon/src/embedding/: mod.rs  openai.rs
eidolon-daemon/src/prompt/: generator.rs  templates.rs
eidolon-daemon/src/proxy/: capture.rs  classify.rs  handler.rs  mod.rs  recall.rs  session.rs
eidolon-daemon/src/routes/: activity.rs  audit.rs  brain.rs  gate.rs  growth.rs  mod.rs  prompt.rs  sessions.rs  tasks.rs
eidolon-daemon/tests/: pentest_auth.rs  pentest_brain_isolation.rs  pentest_gate_bypass.rs  pentest_injection.rs  pentest_rate_limit.rs  pentest_scrub_live.rs  pentest_secrets.rs  pentest_session_security.rs  pentest_ssrf.rs
eidolon-lib/: Cargo.toml
eidolon-lib/src/: absorb.rs  brain.rs  decay.rs  dreaming.rs  evolution.rs  graph.rs  growth.rs  instincts.rs  interference.rs  lib.rs  pca.rs  persistence.rs  reasoning.rs  substrate.rs  types.rs
eidolon-tui/: Cargo.toml
eidolon-tui/src/: app.rs  config.rs  dispatch.rs  event_loop.rs  lib.rs  main.rs
eidolon-tui/src/agents/: claude.rs  codex.rs  gate.rs  mod.rs  orchestrator.rs  prompt_generator.rs
eidolon-tui/src/commands/: daemon.rs  local.rs  mod.rs
eidolon-tui/src/conversation/: manager.rs  mod.rs  personality.rs  router.rs
eidolon-tui/src/daemon/: client.rs
eidolon-tui/src/dataset/: collector.rs
eidolon-tui/src/embedding/: engram.rs  http.rs  mod.rs  openai.rs
eidolon-tui/src/intelligence/: budget.rs  compressor.rs  distiller.rs  json_repair.rs  mod.rs  pipeline.rs  router.rs  selector.rs  synthesizer.rs
eidolon-tui/src/llm/: client.rs  grammar.rs  mod.rs  sidecar.rs
eidolon-tui/src/syntheos/: axon.rs  broca.rs  chiasm.rs  credd.rs  engram.rs  mod.rs  openspace.rs  soma.rs
eidolon-tui/src/tui/: animation.rs  mod.rs  terminal.rs  theme.rs
eidolon-tui/src/tui/widgets/: agent_panel.rs  chat_area.rs  claude_panel.rs  input_bar.rs  mod.rs  status_bar.rs  thinking.rs
eidolon-tui/tests/: collector_test.rs  config_test.rs  gate_test.rs  grammar_test.rs  llm_test.rs  manager_test.rs  router_test.rs  syntheos_test.rs  theme_test.rs
eidolon/src/: main.rs
integration/: curate.ts  index.ts  manager.ts  routes.ts  types.ts
rust/: Cargo.toml
rust/src/: absorb.rs  instincts.rs  lib.rs  main.rs  pca.rs  substrate.rs  types.rs
rust/tests/: integration.rs
scripts/: brain-benchmark.ts  eidolon-gate.sh  generate-instincts.sh
tests/: brain-openspace.test.ts
