[package]
name = "eidolon-daemon"
version = "0.5.0"
edition = "2021"

[lib]
name = "eidolon_daemon"
path = "src/lib.rs"

[[bin]]
name = "eidolon-daemon"
path = "src/main.rs"

[features]
evolution = ["eidolon-lib/evolution"]
reasoning = ["eidolon-lib/reasoning"]

[dependencies]
eidolon-lib = { path = "../eidolon-lib" }
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
regex = "1"
tokio-stream = "0.1"
sha2 = "0.11.0"
which = "7"
dashmap = "6"
rusqlite = { version = "0.33", features = ["bundled"] }
ndarray = { version = "0.16", features = ["serde"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
