[package]
name = "eidolon-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "eidolon_lib"
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
ordered-float = "5"
flate2 = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[features]
evolution = []
reasoning = []
