[package]
name = "eidolon-tui"
version = "0.1.0"
edition = "2021"

[lib]
name = "eidolon_tui"
path = "src/lib.rs"

[[bin]]
name = "eidolon-tui"
path = "src/main.rs"

[dependencies]
eidolon-lib = { path = "../eidolon-lib" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
futures = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tokio-stream = "0.1"
regex = "1"
arboard = "3"

[dev-dependencies]
tempfile = "3"
