[package]
name = "eidolon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eidolon"
path = "src/main.rs"

[lib]
name = "eidolon"
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
ordered-float = "5"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
